// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MonitorFilter components renders properly 1`] = `
ShallowWrapper {
  "length": 1,
}
`;

exports[`monitoringColumn Cell renders 1 person is activly monitoring the call 1`] = `
ShallowWrapper {
  "length": 1,
}
`;

exports[`monitoringColumn Cell renders 1 person previously monitored the call 1`] = `
ShallowWrapper {
  "length": 1,
}
`;

exports[`monitoringColumn Cell renders does not render in non-voice channels 1`] = `
ShallowWrapper {
  "length": 1,
}
`;

exports[`monitoringColumn Cell renders monitor button is disabled when monitoring id matches the rows id 1`] = `
ShallowWrapper {
  "length": 1,
}
`;

exports[`monitoringColumn Cell renders monitor button is disabled when monitoring status is connecting 1`] = `
ShallowWrapper {
  "length": 1,
}
`;

exports[`monitoringColumn configuration object configurations show method returns false when value is false 1`] = `
Object {
  "Cell": [Function],
  "Filter": [Function],
  "Header": "Monitoring",
  "accessor": [Function],
  "filterMethod": [Function],
  "id": "monitoring",
  "minWidth": 180,
  "resizable": false,
  "show": false,
}
`;

exports[`monitoringColumn configuration object configurations show method returns true when value is true 1`] = `
Object {
  "Cell": [Function],
  "Filter": [Function],
  "Header": "Monitoring",
  "accessor": [Function],
  "filterMethod": [Function],
  "id": "monitoring",
  "minWidth": 180,
  "resizable": false,
  "show": true,
}
`;
